@@ -2,7 +2,7 @@ package com.robertx22.mine_and_slash.database.stats.types.traits.bad_ones;
 
 import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.database.stats.Trait;
-import com.robertx22.mine_and_slash.database.stats.mods.flat.offense.PhysicalDamageFlat;
+import com.robertx22.mine_and_slash.database.stats.mods.percent.offense.PhysicalDamagePercent;
 
 import java.util.Arrays;
 import java.util.List;
@@ -18,7 +18,7 @@ public class Clumsy extends Trait {
 
     @Override
     public List<StatMod> getStats() {
-        return Arrays.asList(new PhysicalDamageFlat().size(StatMod.Size.HALF_LESS));
+        return Arrays.asList(new PhysicalDamagePercent().size(StatMod.Size.HALF_LESS));
 
     }
 
